@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.01.17146 (03 Nov 2010)
+
+  03 Nov 2010; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.01.17086.ebuild, -portage-2.2.01.17133.ebuild,
+  +portage-2.2.01.17146.ebuild:
+  Version bump, matches portage-2.2.0_alpha3
+
 *portage-2.2.01.17133 (28 Oct 2010)
 
   28 Oct 2010; Fabian Groffen <grobian@gentoo.org>
